<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_background"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="50dp">

    <ImageView
        android:id="@+id/spotify_icon"
        android:layout_width="84dp"
        android:layout_height="90dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_spotify_white"/>

    <LinearLayout
        android:id="@+id/label_login_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/spotify_icon"
        android:orientation="vertical"
        android:layout_marginBottom="-150dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/main_font"
            android:text="@string/login_title"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signup_free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:fontFamily="@font/main_font"
            android:background="@drawable/login_green_button"
            android:text="@string/signup_free"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:background="@drawable/login_transparent_button"
            android:drawableStart="@drawable/ic_smartphone"
            android:paddingStart="15dp"
            android:text="@string/login_btn_phone"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:background="@drawable/login_transparent_button"
            android:drawableStart="@drawable/ic_google"
            android:paddingStart="15dp"
            android:text="@string/login_btn_google"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login_facebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:background="@drawable/login_transparent_button"
            android:drawableStart="@drawable/ic_facebook"
            android:paddingStart="15dp"
            android:text="@string/login_btn_facebook"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:fontFamily="@font/main_font"
            android:background="@drawable/login_transparent_no_border_button"
            android:text="@string/login_btn"/>
    </LinearLayout>

</RelativeLayout>