<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical">
    <TextView
        android:id="@+id/tv1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:fontFamily="@font/main_font"
        android:text="@string/signup_policy"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv1"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/main_font"
        android:text="Điều khoản sử dụng"
        android:textStyle="bold"
        android:textColor="@color/active_button_color"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/tv2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/policy"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/main_font"
        android:text="@string/signup_privacy"
        android:textColor="@color/white"
        android:textSize="15sp"/>
    <TextView
        android:id="@+id/privatecy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv2"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/main_font"
        android:text="Chính sách quyền riếng tư"
        android:textStyle="bold"
        android:textColor="@color/active_button_color"
        android:textSize="15sp"/>
    <RadioButton
        android:id="@+id/rbth1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privatecy"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/main_font"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layoutDirection="rtl"
        android:textDirection="ltr"
        android:text="Tôi không muốn nhận tin nhắn tiếp thị từ Spotify."/>
    <RadioButton
        android:id="@+id/rbth2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rbth1"
        android:fontFamily="@font/main_font"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:layoutDirection="rtl"
        android:textDirection="ltr"
        android:text="@string/information_application"/>
</RelativeLayout>